updated end of easy ustacks images for notebook

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -291,6 +291,19 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_3.png?raw=true)\n",
     "<br>\n",
     "\n",
+    "If you had hit no, it would report an error message and quit the program:\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_ruh.png?raw=true)\n",
+    "\n",
+    "When you did run it, it spits out the time:\n",
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_time.png?raw=true)\n",
+    "<br>\n",
+    "\n",
+    "And the final plot:\n",
+    "\n",
+    "\n",
     "### Questions for the group\n",
     "\n",
     "(1) How do you make the trade-off for dedicating time to automating (to save time)?\n",
