--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -293,8 +293,10 @@
     "\n",
     "If you had hit no, it would report an error message and quit the program:\n",
     "<br>\n",
+    "<br>\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_ruh.png?raw=true)\n",
-    "\n",
+    "<br>\n",
+    "<br>\n",
     "When you did run it, it spits out the time:\n",
     "\n",
     "<br>\n",
@@ -303,6 +305,9 @@
     "\n",
     "And the final plot:\n",
     "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/plot.png?raw=true)\n",
+    "<br>\n",
     "\n",
     "### Questions for the group\n",
     "\n",
