reformatted seminar demo notebook

--- a/Seminar/FSH 510 Walkthrough.ipynb
+++ b/Seminar/FSH 510 Walkthrough.ipynb
@@ -7,11 +7,18 @@
     "editable": true
    },
    "source": [
-    "# FSH 510 Walkthrough\n",
-    "### Basic tools for improving reproducibility and efficiency of our bioinformatics\n",
+    "# FSH 510\n",
+    "\n",
+    "## \"Good Enough Pratices,\" Wilson et al 2016\n",
+    "\n",
+    "Link to their main points [here](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/goodenough.md).\n",
     "\n",
     "<br>\n",
-    "<br>"
+    "**Questions for group**\n",
+    "\n",
+    "(1) Which practices do you aim to be better at and what prevents you from getting there?\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -21,11 +28,16 @@
     "editable": true
    },
    "source": [
-    "# 1. Data Integrity\n",
+    "## Basic tools for improving reproducibility and efficiency of bioinformatics\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "### 1. Data Integrity\n",
     "\n",
     "Data we download is the starting point for all of our analyses and conclusions. We should be concerned with its integrity, for our own work, and for reproducibility.\n",
     "\n",
-    "## Check sums\n",
+    "#### Check sums\n",
     "\n",
     "Although it seems improbable, the risk of data corruption during transfers is real. Check sums can be used to verify successful transfers.\n",
     "\n",
@@ -103,7 +115,7 @@
     "editable": true
    },
    "source": [
-    "## Using ``diff`` to find differences between files\n",
+    "#### Using ``diff`` to find differences between files\n",
     "\n",
     "If your check sum suggests that the files are different, and you cannot retransfer the file, then you can use ``diff`` to identify regions that differ between files to, for example, fix them manually.\n",
     "\n",
@@ -148,7 +160,7 @@
     "editable": true
    },
    "source": [
-    "### Questions for group\n",
+    "#### Questions for group\n",
     "\n",
     "(1) How many of us verify the success of data downloads?\n",
     "\n",
@@ -166,7 +178,7 @@
     "editable": true
    },
    "source": [
-    "# 2. Common Python modules \n",
+    "### 2. Common Python modules \n",
     "\n",
     "In our lab, many of us switch between Python, R, Bash, and Excel for evaluating outputs of steps in our Stacks pipeline or formatting files for steps in the pipeline. It could be more efficient to automate multiple steps into one program.\n",
     "\n",
@@ -233,7 +245,7 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timer2.png?raw=true)\n",
     "<br>\n",
     "\n",
-    "### Questions for group\n",
+    "#### Questions for group\n",
     "\n",
     "(1) How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
     "\n",
@@ -253,9 +265,9 @@
     "editable": true
    },
    "source": [
-    "# 3. Automation\n",
+    "### 3. Automation\n",
     "\n",
-    "## Functions\n",
+    "#### Functions\n",
     "\n",
     "Write functions for things you're going to do over and over again. For example, I often want to verify that my code is doing what I hope it's doing, so I'd like it to pause, print something to the screen, and ask me whether the program should continue.\n",
     "\n",
@@ -265,7 +277,7 @@
     "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/getinput.png?raw=true)\n",
     "\n",
-    "## Programs \n",
+    "#### Programs/Scripts \n",
     "\n",
     "#### Example: ``easy_ustacks.py``\n",
     "\n",
@@ -309,7 +321,7 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/plot.png?raw=true)\n",
     "<br>\n",
     "\n",
-    "### Questions for the group\n",
+    "#### Questions for the group\n",
     "\n",
     "(1) How do you make the trade-off for dedicating time to automating (to save time)?\n",
     "\n"
@@ -322,7 +334,7 @@
     "editable": true
    },
    "source": [
-    "# 4. GitHub\n",
+    "### 4. GitHub\n",
     "\n",
     "GitHub is a distributed version control system written by the maker of Linux. It has a steep learning curve, but once over the hump, is great for sharing, collaborating, and version control.\n",
     "\n",
@@ -362,13 +374,13 @@
     "\n",
     "If we had a lab GitHub repository with shared scripts, there would be less reinventing the wheel and a more efficient entry into bioinformatics for new students.\n",
     "\n",
-    "# 5. Jupyter Notebook\n",
+    "### 5. Jupyter Notebook\n",
     "\n",
     "This is a Jupyter Notebook!\n",
     "\n",
-    "### Questions for the group\n",
+    "#### Questions for the group\n",
     "\n",
-    "(1) GitHub versus Evernote?\n",
+    "(1) GitHub versus Evernote versus Jupyter Notebook?\n",
     "\n",
     "- version control\n",
     "- releases\n",
