updated notebook w formatting

--- a/Seminar/FSH 510 - 20160216.ipynb
+++ b/Seminar/FSH 510 - 20160216.ipynb
@@ -7,11 +7,18 @@
     "editable": true
    },
    "source": [
-    "# FSH 510 Walkthrough: \n",
-    "### Basic tools for improving reproducibility and efficiency of our bioinformatics\n",
+    "# FSH 510\n",
+    "\n",
+    "## \"Good Enough Pratices,\" Wilson et al 2016\n",
+    "\n",
+    "Link to their main points [here](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/goodenough.md).\n",
     "\n",
     "<br>\n",
-    "<br>"
+    "**Questions for group**\n",
+    "\n",
+    "(1) Which practices do you aim to be better at and what prevents you from getting there?\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -21,11 +28,16 @@
     "editable": true
    },
    "source": [
-    "# 1. Data Integrity\n",
+    "<br>\n",
+    "<br>\n",
+    "## Basic tools for improving reproducibility and efficiency of bioinformatics\n",
+    "\n",
+    "\n",
+    "### 1. Data Integrity\n",
     "\n",
     "Data we download is the starting point for all of our analyses and conclusions. We should be concerned with its integrity, for our own work, and for reproducibility.\n",
     "\n",
-    "## Check sums\n",
+    "#### Check sums\n",
     "\n",
     "Although it seems improbable, the risk of data corruption during transfers is real. Check sums can be used to verify successful transfers.\n",
     "\n",
@@ -103,7 +115,7 @@
     "editable": true
    },
    "source": [
-    "## Using ``diff`` to find differences between files\n",
+    "#### Using ``diff`` to find differences between files\n",
     "\n",
     "If your check sum suggests that the files are different, and you cannot retransfer the file, then you can use ``diff`` to identify regions that differ between files to, for example, fix them manually.\n",
     "\n",
@@ -150,8 +162,9 @@
    "source": [
     "#### Questions for group\n",
     "\n",
-    "- How many of us verify the success of data downloads?\n",
-    "- How many of us document how/when we downloaded and verification of successful download?\n",
+    "(1) How many of us verify the success of data downloads?\n",
+    "\n",
+    "(2) How many of us document how/when we downloaded and verification of successful download?\n",
     "\n",
     "<br>\n",
     "<br>\n",
@@ -165,17 +178,16 @@
     "editable": true
    },
    "source": [
-    "# 2. Common Python modules \n",
+    "### 2. Common Python modules \n",
     "\n",
-    "In our lab, many of us switch between Python, R, Bash, and Excel for evaluating outputs of steps in our Stacks pipeline or formatting files for steps in the pipeline. \n",
+    "In our lab, many of us switch between Python, R, Bash, and Excel for evaluating outputs of steps in our Stacks pipeline or formatting files for steps in the pipeline. It could be more efficient to automate multiple steps into one program.\n",
     "\n",
-    "It would be more efficient to automate multiple steps into one program.\n",
+    "At first, I did all dataframe work, plotting, and analyses in R because that's where I was comfortable and people told me Python wasn't great at these things. It turns out there are Python modules for the many reasons we turn to R, and they work just fine.\n",
     "\n",
-    "At first, I did all data frame work, plotting, and analyses in R because that's where I was comfortable and people told me Python wasn't great at these things. It turns out there are Python modules for the many reasons we turn to R, and they work just fine:\n",
-    "\n",
-    "- ``matplotlib`` for basic plotting\n",
-    "- ``pandas`` for data frames\n",
     "- ``numpy`` & ``scipy`` for the fundamentals of math and science computing\n",
+    "- ``matplotlib`` for basic plotting, based on MATLAB's plotting functions\n",
+    "- ``pandas`` for higher level computing with dataframes\n",
+    "\n",
     "\n",
     "And some other cool modules we could use to beef up our code:\n",
     "\n",
@@ -183,29 +195,21 @@
     "- ``argparse`` for managing user input\n",
     "- ``time`` for time stamps and timing processes\n",
     "\n",
-    "#### ``pandas``\n",
-    "\n",
-    "``pandas`` supports data frame objects and is highly compatible with other data analysis modules. It also makes it easy to change file type, like from Excel to CSV to text, etc.\n",
-    "\n",
-    "Super similar to R. For example:\n",
-    "\n",
-    "- read in a csv with ``pandas.read_csv()``\n",
-    "- read out a CSV with ``pandas.DataFrame.to_CSV()``\n",
-    "- sort df with ``pandas.DataFrame.sort_values()``\n",
-    "- subset with attribute ``.sub()`` including boolean subsets like ``(df > 0).all()``\n",
-    "- merging, joining, concatenating data frames with ``pandas.concat()`` & ``pandas.join()``\n",
-    "\n",
-    "Make a data frame using lists:\n",
-    "\n",
-    "<br>\n",
-    "<img src=printdf.png>\n",
-    "<br>\n",
-    "<img src=printeddf.png>\n",
-    "\n",
-    "\n",
-    "#### ``numpy`` and ``scipy``\n",
     "\n",
     "#### ``matplotlib``\n",
+    "\n",
+    "Basic plotting in ``matplotlib`` isn't too different from basic plotting in R, just not built in and different syntax.\n",
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/pyplot.png?raw=true)\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "<br>\n",
+    "Example of multiple boxplots:\n",
+    "\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/pyplot_fig.png?raw=true)\n",
     "\n",
     "#### ``argparse``\n",
     "\n",
@@ -225,31 +229,29 @@
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/helpfile.png?raw=true)\n",
     "<br>\n",
     "\n",
-    "\n",
-    "#### ``time``\n",
-    "\n",
-    "Here's a simple timer function:\n",
-    "\n",
-    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timerfn.png?raw=true)\n",
-    "\n",
-    "Then, feeding in start and end times by using ``time.time()`` before and after a given process, you can print it to the screen like this:\n",
-    "\n",
-    "[NEED TO GET PIC]\n",
-    "\n",
-    "\n",
     "#### ``subprocess``\n",
     "\n",
-    "I use ``subprocess`` to run scripts from within my Python script, but it there's a lot more it can do that goes over my head like managing standard output and errors.\n",
+    "I use ``subprocess`` to run scripts from within my Python script, but there's a lot more it can do that goes over my head like managing standard output and errors.\n",
     "\n",
     "<br>\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/subprocess.png?raw=true)\n",
     "<br>\n",
     "\n",
+    "#### ``time``\n",
+    "\n",
+    "Here's a simple timer function:\n",
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/timer2.png?raw=true)\n",
+    "<br>\n",
+    "\n",
     "#### Questions for group\n",
     "\n",
-    "- How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
-    "- What other modules do folks use in Python?\n",
-    "- Eleni wanted to know about packages in R that support large numbers of loci, etc., what do folks use?\n",
+    "(1) How many languages/platforms do folks code in when running their bioinformatics pipelines?\n",
+    "\n",
+    "(2) What other modules do folks use in Python?\n",
+    "\n",
+    "(3) What packages to folks use in other languages like R? (Eleni brought this up)\n",
     "\n",
     "<br>\n",
     "<br>\n",
@@ -263,21 +265,23 @@
     "editable": true
    },
    "source": [
-    "# 3. Automation\n",
+    "### 3. Automation\n",
     "\n",
-    "## Functions\n",
+    "#### Functions\n",
     "\n",
-    "Write functions for this you're going to do over and over again. For example, I often want to verify that my code is doing what I hope it's doing, so I'd like it to pause, print something to the screen, and ask me whether the program should continue.\n",
+    "Write functions for things you're going to do over and over again. For example, I often want to verify that my code is doing what I hope it's doing, so I'd like it to pause, print something to the screen, and ask me whether the program should continue.\n",
     "\n",
     "#### Example: recursive function for yes-no-else user input\n",
     "\n",
+    "<br>\n",
+    "\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/getinput.png?raw=true)\n",
     "\n",
-    "## Programs \n",
+    "#### Programs/Scripts \n",
     "\n",
     "#### Example: ``easy_ustacks.py``\n",
     "\n",
-    "To run ``ustacks``, some of our lab members write bash scripts in bash, others write bash scripts in Python (as to not have to learn the syntax of bash). Then, we run the bash script from the terminal. Afterwards, many of us are interested in how many loci are retained per individual per population to decide whether to include all individuals for further analyses. Most of our lab mates then run an additional bash command to count loci, then format the output to fit into excel or R, to then plot. Some of us run ``ustacks`` overnight because we know it takes a long time, but knowing exactly how long it takes could help us make better use of time.\n",
+    "To run ``ustacks``, some of our lab members write bash scripts in bash, others write bash scripts in Python (as to not have to learn the syntax of bash). Then, we run the bash script from the terminal. Afterwards, many of us are interested in how many loci are retained per individual per population to decide whether to include all individuals for further analyses. Most of our lab mates then run an additional bash command to count loci, then format the output to fit into excel or R, to then plot. Some of us run ``ustacks`` overnight because we know it takes a long time, but knowing exactly how long it takes could help us make better use of time. Automating and verification of steps to user may reduce opportunities for human error.\n",
     "\n",
     "Here, I've written a simple program that (1) writes your bash script, (2) runs your bash script, (3) plots loci per individual per population, and (4) times how long it takes to run ``ustacks``.\n",
     "\n",
@@ -285,9 +289,42 @@
     "\n",
     "Here's what it looks like at the command line:\n",
     "\n",
-    "[images of user input/output]\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_1.png?raw=true)\n",
+    "<br>\n",
     "\n",
-    "Automating and verification of steps to user may reduce opportunities for human error."
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_2.png?raw=true)\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_3.png?raw=true)\n",
+    "<br>\n",
+    "\n",
+    "If you had hit no, it would report an error message and quit the program:\n",
+    "<br>\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_ruh.png?raw=true)\n",
+    "<br>\n",
+    "<br>\n",
+    "When you did run it, it spits out the time:\n",
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/eu_time.png?raw=true)\n",
+    "<br>\n",
+    "\n",
+    "And the final plot:\n",
+    "\n",
+    "<br>\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/plot.png?raw=true)\n",
+    "<br>\n",
+    "\n",
+    "#### Questions for the group\n",
+    "\n",
+    "(1) How do you make the trade-off for dedicating time to automating (to save time)?\n",
+    "\n"
    ]
   },
   {
@@ -297,7 +334,7 @@
     "editable": true
    },
    "source": [
-    "# 4. GitHub\n",
+    "### 4. GitHub\n",
     "\n",
     "GitHub is a distributed version control system written by the maker of Linux. It has a steep learning curve, but once over the hump, is great for sharing, collaborating, and version control.\n",
     "\n",
@@ -329,15 +366,21 @@
     "\n",
     "Here's what a release looks like:\n",
     "\n",
+    "<br>\n",
     "![image](https://github.com/nclowell/RAD_Scallops/blob/master/Seminar/images_for_notebook/release.png?raw=true)\n",
     "\n",
+    "<br>\n",
     "I go to Mary's GitHub and steal her scripts all the time...\n",
     "\n",
     "If we had a lab GitHub repository with shared scripts, there would be less reinventing the wheel and a more efficient entry into bioinformatics for new students.\n",
     "\n",
+    "### 5. Jupyter Notebook\n",
+    "\n",
+    "This is a Jupyter Notebook!\n",
+    "\n",
     "#### Questions for the group\n",
     "\n",
-    "(1) GitHub versus Evernote?\n",
+    "(1) GitHub versus Evernote versus Jupyter Notebook?\n",
     "\n",
     "- version control\n",
     "- releases\n",
