--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2209,11 +2209,14 @@
    "source": [
     "#### [4] Call Marine's genotypes_verif python script\n",
     "\n",
-    "Mary wrote a new version that takes arguments instead of having to change the code in the script\n",
+    "Mary wrote a new version that takes arguments instead of having to change the code in the script. I updated the script to manage command line arguments with ``argparse``\n",
     "\n",
-    "<br>Verify that you've unzipped all of the individual .tags.tsv files\n",
+    "Here's what the help file looks like:\n",
     "\n",
-    "<br>Stack depth of 10"
+    "![image]()\n",
+    "\n",
+    "And I ran it through the command line outside this notebook, and this is what it looked like:\n",
+    "\n"
    ]
   },
   {
