made dir for images for cragigrun1 folder, added image

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2216,6 +2216,8 @@
     "![image]()\n",
     "\n",
     "And I ran it through the command line outside this notebook, and this is what it looked like:\n",
+    "\n",
+    "![image]()\n",
     "\n"
    ]
   },
