added new image

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2213,10 +2213,14 @@
     "\n",
     "Here's what the help file looks like:\n",
     "\n",
-    "![image]()\n",
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebook/corgen_helpfile.png?raw=true)\n",
     "\n",
-    "And I ran it through the command line outside this notebook, and this is what it looked like:\n",
+    "<br>\n",
+    "Here's what the command looks like:\n",
+    "``python genotypes_verif_v2_no_ref_takeARGS.py -i /mnt/hgfs/Data_for_Analysis/WorkingFolder/pstacks -p /mnt/hgfs/Data_for_Analysis/WorkingFolder/popmap_cragigrun1.txt -b 100 -m 10 -c /mnt/hgfs/Data_for_Analysis/WorkingFolder/pstacks/batch_100_biallelic.catalog.tsv -o batch_100_corgen_bi.txt``\n",
     "\n",
+    "<br>And I ran it through the command line outside this notebook, and this is what it looked like:\n",
+    "<br>\n",
     "![image]()\n",
     "\n"
    ]
