added script for plotting n snps by haps

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2221,13 +2221,16 @@
     "\n",
     "<br>And I ran it through the command line outside this notebook, and this is what it looked like:\n",
     "<br>\n",
-    "![image]()\n",
-    "\n"
+    "![image](https://github.com/nclowell/RAD_Scallops/blob/master/CRAGIG_run1/Notebooks/images_for_notebook/corgen_running.png?raw=true)\n",
+    "\n",
+    "<br> So it prints the name of each file as it is processed.\n",
+    "\n",
+    "<br> Double-check that the text file wrote..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -2235,18 +2238,29 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "u'/mnt/hgfs/Ubuntu_Bioinformatics/Git_repo/CRAGIG_run1/Scripts'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t10080\t10144\t10166\t10171\t1029\t10339\t10547\t10604\t10609\t10685\t10836\t11456\t11735\t1188\t1189\t12315\t12412\t12420\t12427\t12512\t12577\t12800\t12807\t12888\t12916\t12953\t13236\t13248\t13280\t13669\t14181\t14260\t14367\t14676\t15003\t15081\t15181\t15213\t15267\t15354\t15384\t15467\t15468\t15469\t15474\t1552\t15540\t15541\t15567\t15698\t15863\t1623\t16231\t16269\t16432\t16434\t16435\t16505\t16585\t16669\t16845\t17010\t17132\t17179\t1785\t17873\t18052\t18083\t1809\t18511\t18551\t18665\t18773\t18807\t18900\t19132\t19558\t196\t19639\t19770\t19771\t19884\t19893\t20183\t20333\t20574\t20582\t20615\t20616\t20669\t20706\t20741\t20843\t20981\t21054\t21154\t21171\t21372\t21424\t21465\t21593\t21844\t2189\t21965\t22140\t22391\t22536\t22629\t2400\t2481\t253\t256\t2717\t2732\t2796\t2884\t3068\t3313\t3349\t3421\t3521\t3580\t3804\t3864\t3931\t4407\t4449\t4463\t4516\t4776\t4814\t4836\t4969\t5148\t5250\t5350\t5612\t5723\t654\t6868\t6943\t7129\t7132\t7259\t7369\t7379\t7435\t7531\t7672\t8140\t825\t827\t8287\t8456\t8460\t8464\t8677\t9298\t9368\t9511\t9536\t969\t9865\t\r\n",
+      "FG009\ta\ta\tb\tb\tb\ta\tab\tb\tb\t-\tab\tb\t-\tb\ta\tb\ta\ta\tab\ta\tb\tb\tab\ta\tab\tb\ta\tab\tb\tb\tb\tb\t-\t-\tb\tb\ta\tb\tb\ta\ta\tab\tab\tab\tab\tb\tab\tab\tab\tb\tab\tab\ta\ta\tab\tab\tab\tab\ta\tb\ta\ta\ta\tab\tb\tb\tab\tb\tb\ta\tab\ta\ta\tb\tab\tb\ta\ta\tb\ta\tb\tab\tb\tb\tb\tb\ta\ta\tb\tb\tb\tb\tb\tb\tb\tb\tb\tb\ta\tab\tb\ta\ta\t-\ta\tb\ta\tb\ta\ta\ta\ta\ta\ta\tb\tb\tb\tab\ta\ta\ta\tb\ta\tb\ta\tb\tab\tab\tab\ta\ta\tb\tb\tb\tab\tb\tab\tb\tb\tb\t-\tab\ta\tb\tab\ta\tb\tb\ta\ta\tab\tb\tb\tb\tb\ta\tab\ta\tab\t-\tb\tb\ta\t\r\n"
+     ]
     }
    ],
    "source": [
-    "python genotypes_verif_v2_no_ref_takeARGS.py"
+    "!head -n 2 batch_100_corgen_bi.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ruh roh! It looks like there are super few loci. This (above) is the first two lines of the text file, where the first is the numbered loci, and the second is the genotypes in letter format for the first individual. However! Mary has a ton more loci. I know that I used incredibly stringent filtering, so maybe that's why. I should just quickly double-check the number of loci that came out of populations round 2.\n",
+    "\n",
+    "<br>Oh snikies, there were 5027 loci at the end of populations round 2.\n",
+    "\n",
+    "Chatting with Dan, Lorenz, Mary, and hopefully Brent soon... I'm realizing that this is probably real and that I probably shouldn't be filtering for biallelic loci. Lorenz said it would be more powerful to use multi-allelic in a parentage panel.\n",
+    "\n",
+    "He also said that if I want to make sure this result isn't crazy, I should try plotting number of SNPs by number of haplotypes, and also look to see if loci within a tag are in in HWE.\n"
    ]
   },
   {
