updated notebook, renamed some folders

--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2252,7 +2252,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Ruh roh! It looks like there are super few loci. This (above) is the first two lines of the text file, where the first is the numbered loci, and the second is the genotypes in letter format for the first individual. However! Mary has a ton more loci. I know that I used incredibly stringent filtering, so maybe that's why. I should just quickly double-check the number of loci that came out of populations round 2.\n",
     "\n",
@@ -2260,14 +2263,21 @@
     "\n",
     "Chatting with Dan, Lorenz, Mary, and hopefully Brent soon... I'm realizing that this is probably real and that I probably shouldn't be filtering for biallelic loci. Lorenz said it would be more powerful to use multi-allelic in a parentage panel.\n",
     "\n",
-    "He also said that if I want to make sure this result isn't crazy, I should try plotting number of SNPs by number of haplotypes, and also look to see if loci within a tag are in in HWE.\n"
+    "He also said that if I want to make sure this result isn't crazy, I should try plotting number of SNPs by number of haplotypes, and also look to see if loci within a tag are in in HWE.\n",
+    "\n",
+    "\n",
+    "20170302\n",
+    "\n",
+    "I had a chat with Lorenz, Brent, and Molly this week that resteered my bioinformatics a bit. First, Lorenz pointed out that running through the bioinformatics for population structure shouldn't be that different than finding loci for Molly's parentage panel. Lorenz suggested that I rerun ``populations`` a second time, keeping loci that occur in 75% or more of individuals, in all populations. He also said to not filter for biallelic loci, and also to filter for a minor allele frequency of .02."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": []
