--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2268,7 +2268,32 @@
     "\n",
     "20170302\n",
     "\n",
-    "I had a chat with Lorenz, Brent, and Molly this week that resteered my bioinformatics a bit. First, Lorenz pointed out that running through the bioinformatics for population structure shouldn't be that different than finding loci for Molly's parentage panel. Lorenz suggested that I rerun ``populations`` a second time, keeping loci that occur in 75% or more of individuals, in all populations. He also said to not filter for biallelic loci, and also to filter for a minor allele frequency of .02."
+    "I had a chat with Lorenz, Brent, and Molly this week that resteered my bioinformatics plan a bit. First, Lorenz pointed out that running through the bioinformatics for population structure shouldn't be that different than finding loci for Molly's parentage panel. Lorenz suggested that I rerun ``populations`` a second time, keeping loci that occur in 75% or more of individuals, in all populations. He also said to not filter for biallelic loci, and also to filter for a minor allele frequency of .02. He also said that I should go forward with a few ways of visualizing my data before deciding a course of action, and these included checking for HWE at each locus and looking at FIS distribution to try to weed out things like paralogous genes.\n",
+    "\n",
+    "This reorganization means I should probably name some files differently. So I'm going to lump all the ``populations`` output that I had into a new folder, and put the date that I ran it on. And I'm also going to rename the poorly named  ``pstacks`` folder as ``Stacks-2`` for the second round of Stacks after we've made our de novo reference \"genome.\" And we're going to start calling this batch 101\n",
+    "\n",
+    "Batch 101 - After Lorenz and I chatted and he pointed out I could be less stringent about my ``populations`` parameters. Batch number of previous files in this iteration of the pipeline is 100.\n",
+    "\n",
+    "## ``Populations`` Round 2, take 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd /mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks-2"
    ]
   },
   {
@@ -2280,7 +2305,9 @@
     "editable": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "!stacks populations -b 101 -P Stacks-2 -M popmap_cragigrun1.txt -t 10 -r 1 -p 5 -m 10 --genepop"
+   ]
   }
  ],
  "metadata": {
