--- a/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
+++ b/CRAGIG_run1/Notebooks/CRAGIG_RUN1.ipynb
@@ -2274,14 +2274,18 @@
     "\n",
     "Batch 101 - After Lorenz and I chatted and he pointed out I could be less stringent about my ``populations`` parameters. Batch number of previous files in this iteration of the pipeline is 100.\n",
     "\n",
-    "## ``Populations`` Round 2, take 2"
+    "## ``Populations`` Round 2, take 2\n",
+    "\n",
+    "Going to use a -p of 3 because I want to make sure the loci are in at least about half of the populations, and an -r of .75 is what Lorenz suggested. I think I could even go a little lower if need be."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -2293,21 +2297,58 @@
     }
    ],
    "source": [
-    "cd /mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks-2"
+    "cd /mnt/hgfs/SHARED_FOLDER/WorkingFolder/Stacks_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fst kernel smoothing: off\n",
+      "Bootstrap resampling: off\n",
+      "Percent samples limit per population: 0.75\n",
+      "Locus Population limit: 3\n",
+      "Minimum stack depth: 10\n",
+      "Log liklihood filtering: off; threshold: 0\n",
+      "Minor allele frequency cutoff: 0\n",
+      "Maximum observed heterozygosity cutoff: 1\n",
+      "Applying Fst correction: none.\n",
+      "Parsing population map.\n",
+      "Found 71 input file(s).\n",
+      "  5 populations found\n",
+      "    WA_Strait: FG001, FG002, FG003, FG004, FG005, FG006, FG007, FG009, FG010, FG011, FG013, FG014, FG015, FG016, FG017, FG018, FG019, FG021, FG024, FG026, FG027, FG031, FG032, FG033, FG034, FG035\n",
+      "    WA_SanJuans: FG100_A, FG100_B, FG101_A, FG101_B, FG102_A, FG102_B, FG103_A, FG103_B, FG104_A, FG104_B, FG106, FG107, FG108, FG109, FG111\n",
+      "    WA_Dabob: FG201, FG202, FG203, FG204, FG205, FG206, FG207, FG209, FG210, FG211, FG212\n",
+      "    AK: Q314, Q316, Q318, Q323, Q324, Q325, Q326\n",
+      "    CA_Catalina: Q330, Q332, Q334, Q338, Q339, Q347, Q351, Q352, Q353, Q354, Q355, Q356\n",
+      "  1 group of populations found\n",
+      "    1: WA_Strait, WA_SanJuans, WA_Dabob, AK, CA_Catalina\n",
+      " Unable to open '../Stacks_2/batch_101.catalog'\n",
+      "Unable to load the catalog '../Stacks_2/batch_101.catalog'\n"
+     ]
+    }
+   ],
+   "source": [
+    "!stacks populations -b 101 -P ../Stacks_2 -M ../popmap_cragigrun1.txt -t 10 -r .75 -p 3 -m 10 --genepop"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "!stacks populations -b 101 -P Stacks-2 -M popmap_cragigrun1.txt -t 10 -r 1 -p 5 -m 10 --genepop"
-   ]
+   "source": []
   }
  ],
  "metadata": {
